--- a/ProAcc/Asset/css/Menu.css
+++ b/ProAcc/Asset/css/Menu.css
@@ -15753,8 +15753,8 @@ legend {
     font-family: 'Font Awesome 5 Free';
     font-style: normal;
     font-weight: 900;
-    src: url(../fonts/fa-solid-900.eot);
-    src: url(../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../fonts/fa-solid-900.woff2) format("woff2"), url(../fa-solid-900.woff) format("woff"), url(../fonts/fa-solid-900.ttf) format("truetype"), url(../fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../../Content/fonts/fa-solid-900.eot);
+    src: url(../../Content/fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../../Content/fonts/fa-solid-900.woff2) format("woff2"), url(../../Content/fonts/fa-solid-900.woff) format("woff"), url(../../Content/fonts/fa-solid-900.ttf) format("truetype"), url(../../Content/fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa, .fas {
