--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -5,7 +5,7 @@
     var mdetails = ViewBag.list;
 }
 <style>
-     /*.cs_Closed {
+    /*.cs_Closed {
         color: lightgreen;
     }
 
@@ -295,21 +295,22 @@
     .noUi-active .range-label span {
         opacity: 1;
     }
+
     .bg-grow-before {
         background-color: darkcyan;
     }
-    
 </style>
 
-<script src="~/Asset/Scripts/Chart.js"></script>
-<script src="~/Asset/Scripts/Chart.RadialGauge.umd.js"></script>
+@Scripts.Render("~/bundles/Scripts/ChartJS")
+@*<script src="~/Asset/Scripts/Chart.js"></script>
+<script src="~/Asset/Scripts/Chart.RadialGauge.umd.js"></script>*@
 @*<script src="~/Asset/Scripts/Prograssbarjs.js"></script>*@
 
 
 <a class="card-title">Dashboard</a>
 <div style="padding: 1em;">
     <div class="row">
-  
+
         <div class="col-lg-12 card" style="margin-bottom:20px;min-height:250px;">
             <div class="row">
                 <table>
@@ -331,130 +332,130 @@
                                 </div>
                             </div>
                         </td>
-                    </tr>                    
+                    </tr>
                 </table>
-                </div>
-              <hr style="margin-top:-20px !important;"/>
-                <div class="row" style="padding:0em 1em 1em 1em;">
-                    <div class="card-body">
-                        <h5 class="card-title">S4 Hana System Conversion</h5>
-                        <form class="">
-                            @if (ViewBag.count != null)
+            </div>
+            <hr style="margin-top:-20px !important;" />
+            <div class="row" style="padding:0em 1em 1em 1em;">
+                <div class="card-body">
+                    <h5 class="card-title">S4 Hana System Conversion</h5>
+                    <form class="">
+                        @if (ViewBag.count != null)
+                        {
+                            int i = ViewBag.count;
+                            string progress = "noUi-origin noUi-background1";
+                            string progress1 = "noUi-origin noUi-background1";
+                            string progress2 = "noUi-origin noUi-background1";
+                            string color = "black";
+                            string color1 = "black";
+                            string color2 = "black";
+                            string color3 = "black";
+                            if (i == 1)
                             {
-                                int i = ViewBag.count;
-                                string progress = "noUi-origin noUi-background1";
-                                string progress1 = "noUi-origin noUi-background1";
-                                string progress2 = "noUi-origin noUi-background1";
-                                string color = "black";
-                                string color1 = "black";
-                                string color2 = "black";
-                                string color3 = "black";
-                                if (i == 1)
-                                {
-                                    //progress = "noUi-origin noUi-connect";
-                                    color = "Green";
-                                }
-                                else if (i == 2)
-                                {
-                                    progress = "noUi-origin noUi-connect";
-                                    // progress1 = "noUi-origin noUi-connect";
-                                    color = "Green";
-                                    color1 = "Green";
-                                }
-                                else if (i == 3)
-                                {
-                                    progress = "noUi-origin noUi-connect";
-                                    progress1 = "noUi-origin noUi-connect";
-                                    // progress2 = "noUi-origin noUi-connect";
-                                    color = "Green";
-                                    color1 = "Green";
-                                    color2 = "Green";
-                                }
-                                else if (i == 4)
-                                {
-                                    progress = "noUi-origin noUi-connect";
-                                    progress1 = "noUi-origin noUi-connect";
-                                    progress2 = "noUi-origin noUi-connect";
-                                    color = "Green";
-                                    color1 = "Green";
-                                    color2 = "Green";
-                                    color3 = "Green";
-                                }
+                                //progress = "noUi-origin noUi-connect";
+                                color = "Green";
+                            }
+                            else if (i == 2)
+                            {
+                                progress = "noUi-origin noUi-connect";
+                                // progress1 = "noUi-origin noUi-connect";
+                                color = "Green";
+                                color1 = "Green";
+                            }
+                            else if (i == 3)
+                            {
+                                progress = "noUi-origin noUi-connect";
+                                progress1 = "noUi-origin noUi-connect";
+                                // progress2 = "noUi-origin noUi-connect";
+                                color = "Green";
+                                color1 = "Green";
+                                color2 = "Green";
+                            }
+                            else if (i == 4)
+                            {
+                                progress = "noUi-origin noUi-connect";
+                                progress1 = "noUi-origin noUi-connect";
+                                progress2 = "noUi-origin noUi-connect";
+                                color = "Green";
+                                color1 = "Green";
+                                color2 = "Green";
+                                color3 = "Green";
+                            }
 
 
-                                <div id="nouislider_range_example" class="noUi-target noUi-ltr noUi-horizontal" style="margin-top: 25px;">
-                                    <div class="noUi-base">
+                            <div id="nouislider_range_example" class="noUi-target noUi-ltr noUi-horizontal" style="margin-top: 25px;">
+                                <div class="noUi-base">
 
-                                        <div class="@progress" style="left: 20%;">
-                                            <div class="noUi-handle noUi-handle-lower" style="background-color:@color">
-                                                <br>
-                                                <p style="width: 200px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;PRE MIGRATION</p>
-                                            </div>
+                                    <div class="@progress" style="left: 20%;">
+                                        <div class="noUi-handle noUi-handle-lower" style="background-color:@color">
+                                            <br>
+                                            <p style="width: 200px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;PRE MIGRATION</p>
                                         </div>
-                                        <div class="@progress1" style="left: 40%;">
-                                            <div class="noUi-handle noUi-handle-upper" style="background-color:@color1">
-                                                <br>
-                                                <p style="width: 200px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;PULL & PUSH</p>
-                                            </div>
+                                    </div>
+                                    <div class="@progress1" style="left: 40%;">
+                                        <div class="noUi-handle noUi-handle-upper" style="background-color:@color1">
+                                            <br>
+                                            <p style="width: 200px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;PULL & PUSH</p>
                                         </div>
-                                        <div class="@progress2" style="left: 60%;">
-                                            <div class="noUi-handle noUi-handle-upper" style="background-color:@color2">
-                                                <br>
-                                                <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;POST MIGRATION</p>
-                                            </div>
+                                    </div>
+                                    <div class="@progress2" style="left: 60%;">
+                                        <div class="noUi-handle noUi-handle-upper" style="background-color:@color2">
+                                            <br>
+                                            <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;POST MIGRATION</p>
                                         </div>
-                                        <div class="noUi-origin noUi-background" style="left: 80%;background-color: white !important;">
-                                            <div class="noUi-handle noUi-handle-upper" style="background-color:@color3">
-                                                <br>
-                                                <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;VALIDATION</p>
-                                            </div>
+                                    </div>
+                                    <div class="noUi-origin noUi-background" style="left: 80%;background-color: white !important;">
+                                        <div class="noUi-handle noUi-handle-upper" style="background-color:@color3">
+                                            <br>
+                                            <p style="width: 300px !important;margin-left: -35px;margin-top: 5px;"> &nbsp;VALIDATION</p>
                                         </div>
                                     </div>
                                 </div>
-                            }
-                            @if (ViewBag.count != null)
+                            </div>
+                        }
+                        @if (ViewBag.count != null)
+                        {
+                            int i = ViewBag.count;
+                            int value = 0;
+                            if (i == 1)
                             {
-                                int i = ViewBag.count;
-                                int value = 0;
-                                if (i == 1)
-                                {
-                                    value = 10;
-                                }
-                                else if (i == 2)
-                                {
-                                    value = 35;
-                                }
-                                else if (i == 3)
-                                {
-                                    value = 70;
-                                }
-                                else if (i == 4)
-                                {
-                                    value = 100;
-                                }
-                                @*<fieldset class="position-relative form-group" style="top: 50px;">
+                                value = 10;
+                            }
+                            else if (i == 2)
+                            {
+                                value = 35;
+                            }
+                            else if (i == 3)
+                            {
+                                value = 70;
+                            }
+                            else if (i == 4)
+                            {
+                                value = 100;
+                            }
+                            @*<fieldset class="position-relative form-group" style="top: 50px;">
                                     <monkey-bar min="0" max="100" now=@value class="prograss_Bar" labeled striped></monkey-bar>
                                 </fieldset>*@
-                            }
-                            @*<div class="position-relative form-check">
-                        <label class="form-check-label"><input name="radio1" type="radio" class="form-check-input"> Option one is this and that—be sure to include why it's great</label>
-                    </div>
-                    <div class="position-relative form-check">
-                        <label class="form-check-label">
-                            <input name="radio1" type="radio" class="form-check-input"> Option two can be something else and selecting it will deselect option
-                            one
-                        </label>
-                    </div>
-                    <div class="position-relative form-check disabled"><label class="form-check-label"><input name="radio1" disabled="" type="radio" class="form-check-input"> Option three is disabled</label></div>*@
+                        }
+                        @*<div class="position-relative form-check">
+                                <label class="form-check-label"><input name="radio1" type="radio" class="form-check-input"> Option one is this and that—be sure to include why it's great</label>
+                            </div>
+                            <div class="position-relative form-check">
+                                <label class="form-check-label">
+                                    <input name="radio1" type="radio" class="form-check-input"> Option two can be something else and selecting it will deselect option
+                                    one
+                                </label>
+                            </div>
+                            <div class="position-relative form-check disabled"><label class="form-check-label"><input name="radio1" disabled="" type="radio" class="form-check-input"> Option three is disabled</label></div>*@
 
-                            @*<div class="position-relative form-check"><label class="form-check-label"><input type="checkbox" class="form-check-input"> Check me out</label></div>*@
-                        </form>
-                    </div>
+                        @*<div class="position-relative form-check"><label class="form-check-label"><input type="checkbox" class="form-check-input"> Check me out</label></div>*@
+                    </form>
                 </div>
             </div>
+        </div>
         <div class="col-lg-12 card" style="margin-bottom:20px;">
-            <div class="row">           
-                <div class="col-lg-3 card text-center" >
+            <div class="row">
+                <div class="col-lg-3 card text-center">
                     <label>Pre Conversion</label>
                     <canvas id="chart-Pre_Conversion"></canvas>
                     <label>Total:244</label>
@@ -477,8 +478,8 @@
             </div>
 
         </div>
-      
-  
+
+
         <div class="col-lg-12 card" style="margin-bottom:20px !important;">
             <div class="row">
                 @if (User.IsInRole("Consultant") || User.IsInRole("Admin"))
@@ -491,18 +492,18 @@
                         </div>
                     </div>
                 }
-            <div class="col-md-4">
-                <label class="">Project Name</label>
-                @if (User.IsInRole("Customer"))
-                {
-                @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
-                }
-                else
-                {
-                @Html.DropDownList("Project", new SelectList(Enumerable.Empty<SelectListItem>(), "IDProject", "ProjectName"),
-                       "Select a Customer", new { id = "IDProject", @class = "form-control" })
-                }
-            </div>
+                <div class="col-md-4">
+                    <label class="">Project Name</label>
+                    @if (User.IsInRole("Customer"))
+                    {
+                        @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
+                    }
+                    else
+                    {
+                        @Html.DropDownList("Project", new SelectList(Enumerable.Empty<SelectListItem>(), "IDProject", "ProjectName"),
+                               "Select a Customer", new { id = "IDProject", @class = "form-control" })
+                    }
+                </div>
                 <div class="col-md-2">
                     <label for="exampleEmail" class="">Instance Name</label>
                     @Html.DropDownList("Instance", new SelectList(Enumerable.Empty<SelectListItem>(), "IDInstance", "InstanceName"),
@@ -516,8 +517,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12 card" >
-            <div class="row" >
+        <div class="col-lg-12 card">
+            <div class="row">
 
                 <div class="col-lg-12 card">
                     <div class="card-body">
