--- a/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
@@ -3,10 +3,15 @@
     ViewBag.Title = "AssusmentMonitor";
     Layout = "~/Views/shared/_Layout.cshtml";
 }
-<script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
-<script src="~/Asset/Jquery/jqGrid/jquery.jqGrid.min.js"></script>
-<link href="~/Asset/Jquery/jqGrid/css/octicons.css" rel="stylesheet" />
-<link href="~/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css" rel="stylesheet" />
+@*<script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
+    <script src="~/Asset/Jquery/jqGrid/jquery.jqGrid.min.js"></script>
+
+    <link href="~/Asset/Jquery/jqGrid/css/octicons.css" rel="stylesheet" />
+    <link href="~/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css" rel="stylesheet" />*@
+
+@Styles.Render("~/Content/css/jqGrid")
+@Scripts.Render("~/bundles/Scripts/jqGrid")
+
 <script>
     //$.jgrid.defaults.width =1000;
     $.jgrid.defaults.responsive = true;
@@ -27,30 +32,34 @@
     .ui-jqgrid .ui-jqgrid-view input, .ui-jqgrid .ui-jqgrid-view select, .ui-jqgrid .ui-jqgrid-view textarea, .ui-jqgrid .ui-jqgrid-view button {
         font-size: 11px !important;
     }
-     .ui-jqgrid .ui-jqgrid-bdiv { overflow-y: scroll }
-    #jqGridPager_center {
-    visibility: hidden;
-}
-    .fixed-sidebar .app-sidebar {
-        height:100%!important;
-    }
-    .app-main {
-    flex: 1;
-    display: flex;
-    z-index: 8;
-    position: relative;
-    min-width:100% !important;
-}
-    .app-theme-white.app-container
-    {
-        background:#ffffff;
-    }
-    .app-container
-    {
-        min-height:100%;
+
+    .ui-jqgrid .ui-jqgrid-bdiv {
+        overflow-y: scroll
     }
 
-    
+    #jqGridPager_center {
+        visibility: hidden;
+    }
+
+    .fixed-sidebar .app-sidebar {
+        height: 100% !important;
+    }
+
+    .app-main {
+        flex: 1;
+        display: flex;
+        z-index: 8;
+        position: relative;
+        min-width: 100% !important;
+    }
+
+    .app-theme-white.app-container {
+        background: #ffffff;
+    }
+
+    .app-container {
+        min-height: 100%;
+    }
 </style>
 
 <div class="row">
@@ -68,7 +77,7 @@
             }
             <div class="col-md-4">
                 <label class="">Project Name</label>
-                @if (User.IsInRole("Customer")||User.IsInRole("Project Manager"))
+                @if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
                 {
                     @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
                 }
@@ -206,7 +215,7 @@
 <script>
     document.body.style.zoom = "67%";
     //$(document).ready(function () {
-        
+
     //});
     function LoadTable(Instance) {
 
@@ -459,7 +468,7 @@
                             }, 100);
                             return data;
                         }
-                    },*@    
+                    },*@
 
                 },
                 {
@@ -560,7 +569,7 @@
                             //    //jSaveButton_12
                             //    //jCancelButton_12
                             //}
-                           
+
                         }
                     }
 
@@ -599,8 +608,8 @@
             //    //else {
             //    //    $('#jEditButton_' + row_id).show();
             //    //}
-                
-                
+
+
 
             //},
             ////onSelectRow: function (id) {
@@ -628,7 +637,7 @@
                     $("#jqGrid").jqGrid('setGridState', 'visible');
                 }
                 Show_HideEdit();
-                
+
 
 
             }
@@ -640,20 +649,27 @@
             var UserType ="@Session["UserType"].ToString()"
             if (UserType == 'Customer'|| UserType == 'Consultant' )
             {
-                $("#" + id + "_StatusId option[value='3']").prop('disabled', 'disabled');
-                $("#" + id + "_StatusId option[value='4']").prop('disabled', 'disabled');
-                $("#" + id + "_StatusId option[value='5']").prop('disabled', 'disabled');
+                //$("#" + id + "_StatusId option[value='3']").prop('disabled', 'disabled');
+                //$("#" + id + "_StatusId option[value='4']").prop('disabled', 'disabled');
+                //$("#" + id + "_StatusId option[value='5']").prop('disabled', 'disabled');
+
+                $("#" + id + "_StatusId option[value='3']").hide();
+                $("#" + id + "_StatusId option[value='4']").hide();
+                $("#" + id + "_StatusId option[value='5']").hide();
             }
             else  if (UserType == 'Project Manager')
             {
-                $("#" + id + "_StatusId option[value='1']").prop('disabled', 'disabled');
-                $("#" + id + "_StatusId option[value='5']").prop('disabled', 'disabled');
-            }
-            
+                //$("#" + id + "_StatusId option[value='1']").prop('disabled', 'disabled');
+                //$("#" + id + "_StatusId option[value='5']").prop('disabled', 'disabled');
 
-            
+                $("#" + id + "_StatusId option[value='1']").hide();
+                $("#" + id + "_StatusId option[value='5']").hide();
+            }
+
+
+
             //alert(id);
-            
+
 
         }
         $('#jqGrid').navGrid('#jqGridPager',
@@ -674,7 +690,7 @@
                     //$("#StatusId option[value='3']").attr("disabled", "disabled");
                     //$("#StatusId option[value='4']").attr("disabled", "disabled");
                     //$("#StatusId option[value='5']").attr("disabled","disabled");
-                   
+
                 },
                 errorTextFormat: function (data) {
                     alert("in" + data.responseText);
@@ -729,7 +745,7 @@
             } // search options - define multiple search
         );
         //jQuery("#jqGrid").removeClass('.table-striped');
-        
+
         //document.body.style.zoom = "67%";
     }
     function Show_HideEdit() {
@@ -737,23 +753,23 @@
         var User = '@Session["UserType"]';
         var loginid = '@Session["loginid"]';
         var j = 0;
-       
+
          var UserType ="@Session["UserType"].ToString()"
         if (UserType == 'Project Manager')
         {
-             
+
              for (var i = 0; i < ids.length; i++) {
                  var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-                
+
                  if (Status_Id == 1) {
                      $('#jEditButton_' + ids[i]).hide();
                  }
                  else {
                       $('#jEditButton_' + ids[i]).show();
                  }
-               
+
             }
-           
+
         }
         else {
              for (var i = 0; i < ids.length; i++) {
@@ -764,7 +780,7 @@
                 }
                 $('#jEditButton_' + ids[i]).hide();
             }
-           
+
             var EditFlag = false;
             //  debugger;
             for (var k = j; k < ids.length; k++) {
@@ -794,7 +810,7 @@
            if (Status_Id == 2) {
                $('#jEditButton_' + ids[i]).show();
                 }
-                
+
             }
     }
     function GetPhaseDropDown() {
