--- a/ProAcc/Views/Resource/ResourceAssessment.cshtml
+++ b/ProAcc/Views/Resource/ResourceAssessment.cshtml
@@ -4,10 +4,13 @@
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
-<script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
-<script src="~/Asset/Jquery/jqGrid/jquery.jqGrid.min.js"></script>
-<link href="~/Asset/Jquery/jqGrid/css/octicons.css" rel="stylesheet" />
-<link href="~/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css" rel="stylesheet" />
+@*<script src="~/Asset/Jquery/jqGrid/grid.locale-en.js"></script>
+    <script src="~/Asset/Jquery/jqGrid/jquery.jqGrid.min.js"></script>
+    <link href="~/Asset/Jquery/jqGrid/css/octicons.css" rel="stylesheet" />
+    <link href="~/Asset/Jquery/jqGrid/css/ui.jqgrid-bootstrap4.css" rel="stylesheet" />*@
+
+@Styles.Render("~/Content/css/jqGrid")
+@Scripts.Render("~/bundles/Scripts/jqGrid")
 
 <script>
     //$.jgrid.defaults.width =1000;
@@ -30,10 +33,13 @@
         font-size: 11px !important;
     }
 
-    .ui-jqgrid .ui-jqgrid-bdiv { overflow-y: scroll }
+    .ui-jqgrid .ui-jqgrid-bdiv {
+        overflow-y: scroll
+    }
+
     #jqGridPager_center {
-    visibility: hidden;
-}
+        visibility: hidden;
+    }
 </style>
 
 <div class="row">
@@ -51,7 +57,7 @@
             }
             <div class="col-md-4">
                 <label class="">Project Name</label>
-                @if (User.IsInRole("Customer")||User.IsInRole("Project Manager"))
+                @if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
                 {
                     @Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
                 }
@@ -313,9 +319,9 @@
                         }
                     }]
                     },
-                    
+
                 },
-                
+
                 {
                     label: 'Select Task', name: 'ActivityID', index: 'ActivityID', width: 70, sortable: false, align: 'center', editable: true, hidden: true,
                     cellEdit: true, edittype: 'select', formatter: 'select',//Add Only
@@ -333,7 +339,7 @@
                 },
 
 
-                
+
 
             ],
             loadonce: false,
@@ -427,7 +433,7 @@
                         async: false,
                         contentType: "application/json; charset=utf-8",
                         success: function (Data) {
-                            
+
                             if (Data) {
                                 //debugger;
                                 alert("Deleted Sussfully..!");
@@ -458,7 +464,7 @@
             {
                 multipleSearch: true,
                 showQuery: false
-            } 
+            }
         );
     }
     function GetPhaseDropDown() {
@@ -513,13 +519,13 @@
         });
         return Parameters;
 
-    } 
+    }
     function UpdateUserByRole(RoleID) {
          //$("#RoleID").attr("disabled", "disabled");
          $("#UserID")
             .html("<option value=''>Loading User...</option>")
             .attr("disabled", "disabled");
-        
+
         $.ajax({
             url: '@Url.Action("GetUser","ProjectMonitor")'+"?RoleID="+RoleID,
            // data: '{RoleID: ' + JSON.stringify(RoleID)+'}',
@@ -535,11 +541,11 @@
                     if (value.UserId!=d) {
                          $("#UserID").append($("<option></option>").val(value.UserId).html(value.Name));
                     }
-                   
+
                 })
-            }  
+            }
                     //.html(citiesHtml);
-            
+
         });
 
     }
