--- a/ProAcc/Views/Login/Login.cshtml
+++ b/ProAcc/Views/Login/Login.cshtml
@@ -32,13 +32,14 @@
     </style>
 </head>
 <body>
+
     @using (Html.BeginForm("Validate", "Login"))
     {
-      
+        @Html.AntiForgeryToken()
         <div class="limiter">
-            <div class="container-login100">                
+            <div class="container-login100">
                 <div class="wrap-login100">
-                   
+
                     <img src="~/Asset/images/image_2020_04_26T06_25_25_806Z.png" style="width:350px;height:300px;" />
 
 
@@ -86,10 +87,10 @@
                         </form>
                     </div>
                     <input type="hidden" name="ReturnUrl" value="@Request.QueryString["ReturnUrl"]" />
-                        <footer>
-                            <a class="Cl_Tagname"><a style="font-size:xx-large;font-weight:600;">ProAcc</a> - <strong>S4HANA Conversion Tool</strong></a><br />
-                            <a class="copyright" style="color:gray !important;">©Copyright 2020 Promantus Inc.,All Rights Reserved</a>
-                        </footer>
+                    <footer>
+                        <a class="Cl_Tagname"><a style="font-size:xx-large;font-weight:600;">ProAcc</a> - <strong>S4HANA Conversion Tool</strong></a><br />
+                        <a class="copyright" style="color:gray !important;">©Copyright 2020 Promantus Inc.,All Rights Reserved</a>
+                    </footer>
                 </div>
             </div>
         </div>
