--- a/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
@@ -289,13 +289,20 @@
         var DateInput = function (element, options) {
 
             //var ID = options.id;
+            //var Result_PLST = ID.indexOf('Planed__St_Date');
+            //if (Result_PLST == 2)
+            //{
+            //    alert("HOOO");
+            //}
             //var Cell_Date = $("#" + ID).val();
             //if (Cell_Date == "17/10/1904") {
             //    debugger;
             //    var currentDate=new Date();
             //     $("#" + ID).val(currentDate);
             //}
-            //debugger;
+           // debugger;
+
+
             $(element).on('keypress', function (e) {
                 //if (e.which === 8 && $.inArray(e.target.tagName, inputTags) === -1)
                 e.preventDefault();
@@ -305,12 +312,13 @@
                 defaultDate: +1,
                 altFormat: "mm/dd/yy",
                 dateFormat: "mm/dd/yy",
-                autoSize: true,
+                autoSize: false,
                 changeYear: true,
                 changeMonth: true,
                 showButtonPanel: false,
                 showWeek: false
-            }).datepicker("setDate", new Date());
+            //}).datepicker("setDate", new Date());
+             }).datepicker();
         };
         //var DateInput1 = function (element, options) {
 
@@ -361,12 +369,12 @@
                 $(elem).val($.jgrid.parseDate.call(this, cm.formatoptions.newformat, orgValue, "Y-m-d"));
             }
         };
-
+       
 
         $("#jqGrid").jqGrid({
             url: "@Url.Action("GetData","ProjectMonitor")",
             datatype: "json",
-            editurl: "@Url.Action("SubmitProjectMonitor","ProjectMonitor")",
+           // editurl: "@Url.Action("SubmitProjectMonitor","ProjectMonitor")",
             colModel: [
                 {
                     label: 'Id', name: 'Id', index: 'Id', width: 70,
@@ -542,6 +550,13 @@
                     //classes: "jqgrid-readonlycolumn"
                 },
                 {
+                    label: 'ValidationStatus', name: 'ValidationStatus', width: 80, editable: false,hidden: true,
+                    
+                    editoptions: { value: "True:False" }
+                    //editrules:{custom:true, custom_func:myValidationFunction}
+                    
+                },
+                {
                     name: "",
                     label: "Actions",
                     width: 75,
@@ -550,10 +565,14 @@
                     formatoptions: {
                         keys: true,
                         delbutton: false,
-                        beforeShowForm: function (form) {
-                            alert("in");
-                            //$("#tr_pid").find("input,button,textarea,select").attr("disabled", true);
-                        },
+                        
+                        onEdit:function(rowid) {
+                 //alert("in onEdit: rowid="+rowid+"\nWe don't need return anything");
+             },     
+                        //beforeShowForm: function (form) {
+                            
+                        //    //$("#tr_pid").find("input,button,textarea,select").attr("disabled", true);
+                        //},
                         editformbutton: false,//Determines if popup should open or not
                         afterSave: function (rowid, response, postdata, options) {
                             alert("success");
@@ -570,7 +589,8 @@
                             //    //jCancelButton_12
                             //}
 
-                        }
+                        },
+                        processing:true
                     }
 
                 }
@@ -595,7 +615,62 @@
             pager: "#jqGridPager",
             sortname: 'SequenceNum',
             sortorder: 'asc',
-           onSelectRow: editRow,
+            onSelectRow: editRow,
+            serializeRowData: function (postdata) {
+                debugger;
+                var filterResult;
+                var jsonResult;
+                var ActualStDate = postdata.Actual_St_Date;
+
+
+                       //if (tableSrc == "")
+                       //    jsonResult = $.parseJSON(commentDetails);
+                       //else
+                       //    //Parse values bind to the comments.
+                       //    jsonResult = $.parseJSON(tableSrc);
+
+                //       var newResult = new Object();
+
+                //       //Check if operation is edit.
+                //       if (postdata.oper == "edit") {
+
+                //           //Filter the edited comments from main source.
+                //           newResult = Enumerable.From(jsonResult).Where(function (s) { return s.CommentId = postdata.id }).First();
+                //           newResult.CommentText = postdata.CommentText;
+                //       }
+                //       else {
+                //           filterResult = Enumerable.From(jsonResult).First();
+
+                //           newResult.CommentText = postdata.CommentText;
+                //           newResult.TransactionId = filterResult.TransactionId;
+                //           newResult.TaskId = filterResult.TaskId;
+                //       }
+
+                //filterResult = JSON.stringify(newResult);
+               
+                       $.ajax({
+                           url: '@Url.Action("SubmitProjectMonitor","ProjectMonitor")',
+                           datatype: 'json',
+                           //data: { 'resultData': filterResult, 'action': postdata.oper },
+                           data: { 'Data': postdata},
+                           type: 'POST',
+                           //success: OnCompleteComments,
+                           error: function (xhr, status, error) {
+                               if (xhr.statusText == "Session TimeOut/UnAuthorized") {
+                                   alert(xhr.statusText);
+                                   window.location.href = '@Url.Action("LogOut", "login")';
+                               }
+                               else
+                                   alert(xhr.responseText);
+                           }
+                       });
+               // alert("me");
+            },
+    //        afterEditCell: function (rowid, cellname, value, iRow, iCol) {
+    //            alert("Manoj");
+    //    $('#list').jqGrid('getCell', rowid, iCol).focus();
+    //    return;
+    //},
             //onSelectRow: function (row_id) {
             //    //debugger;
             //    //Show_HideEdit();
@@ -761,7 +836,7 @@
              for (var i = 0; i < ids.length; i++) {
                  var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
 
-                 if (Status_Id == 1) {
+                 if (Status_Id == 1||Status_Id == 3) {
                      $('#jEditButton_' + ids[i]).hide();
                  }
                  else {
@@ -794,6 +869,14 @@
                 //}
             }
 
+             for (var i = 0; i < ids.length; i++) {
+                var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
+           if (Status_Id == 2) {
+               $('#jEditButton_' + ids[i]).show();
+                }
+
+            }
+
             if (User == 'Consultant' || User == 'Customer') {
                 for (var i = 0; i < ids.length; i++) {
                     var User_ID = $('#jqGrid').jqGrid('getCell', ids[i], 'UserID')
@@ -805,13 +888,7 @@
             }
         }
 
-       for (var i = 0; i < ids.length; i++) {
-                var Status_Id = $('#jqGrid').jqGrid('getCell', ids[i], 'StatusId')
-           if (Status_Id == 2) {
-               $('#jEditButton_' + ids[i]).show();
-                }
-
-            }
+      
     }
     function GetPhaseDropDown() {
 				 var Parameters = {};
@@ -860,7 +937,7 @@
 				return Parameters;
 
             }
-    function GetTeamDropDown() {
+    @*function GetTeamDropDown() {
 		    var Parameters = {};
         $.ajax({
             type: "POST",
@@ -883,8 +960,8 @@
         });
 	    return Parameters;
 
-    }
-    function GetConsultantDropDown() {
+    }*@
+    @*function GetConsultantDropDown() {
 	    var Parameters = {};
         $.ajax({
             type: "POST",
@@ -906,7 +983,7 @@
             }
         });
 	    return Parameters;
-    }
+    }*@
     function GetStatusDropDown() {
     var Parameters = {};
     $.ajax({
@@ -968,3 +1045,16 @@
 	return Parameters;
     }
 </script>
+
+@*<script type="text/javascript">
+    function Confirm() {
+        var input = $("<input />");
+        input.attr("type", "hidden").attr("name", "confirm_value");
+        if (confirm("Do you want to save data?")) {
+            input.val("Yes");
+        } else {
+            input.val("No");
+        }
+        $("form")[0].appendChild(input[0]);
+    }
+</script>*@
