--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -77,32 +77,31 @@
 }
     </style>
 
+    @*<link href="~/Asset/css/Loader.css" rel="stylesheet" />*@
 
 </head>
 <body>
     <div id="load" class="LoaderMasterClass">
-        @*<div class="loader"></div>*@
-
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin-top: 15%;
-    margin-left: 50%; background: none; display: block; shape-rendering: crispedges; animation-play-state: running; animation-delay: 0s;" width="200px" height="200px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
-            <g transform="translate(50 42)" style="animation-play-state: running; animation-delay: 0s;">
-                <g transform="scale(0.8)" style="animation-play-state: running; animation-delay: 0s;">
-                    <g transform="translate(-50 -50)" style="animation-play-state: running; animation-delay: 0s;">
-                        <polygon fill="#dfa800" points="72.5 50 50 11 27.5 50 50 50" style="animation-play-state: running; animation-delay: 0s;" transform="rotate(122.36 50 38.5)">
-                            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 50 38.5;360 50 38.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
-                        </polygon>
-                        <polygon fill="#d96c21" points="5 89 50 89 27.5 50" style="        animation-play-state: running;
-        animation-delay: 0s;
-" transform="rotate(122.36 27.5 77.5)">
-                            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 27.5 77.5;360 27.5 77.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
-                        </polygon>
-                        <polygon fill="#35599b" points="72.5 50 50 89 95 89" style="animation-play-state: running; animation-delay: 0s;" transform="rotate(122.36 72.3301 77.5)">
-                            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 72.5 77.5;360 72 77.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
-                        </polygon>
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin-top: 10%;
+            margin-left: 50%; background: none; display: block; shape-rendering: crispedges; animation-play-state: running; animation-delay: 0s;" width="200px" height="200px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+                    <g transform="translate(50 42)" style="animation-play-state: running; animation-delay: 0s;">
+                        <g transform="scale(0.8)" style="animation-play-state: running; animation-delay: 0s;">
+                            <g transform="translate(-50 -50)" style="animation-play-state: running; animation-delay: 0s;">
+                                <polygon fill="#dfa800" points="72.5 50 50 11 27.5 50 50 50" style="animation-play-state: running; animation-delay: 0s;" transform="rotate(122.36 50 38.5)">
+                                    <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 50 38.5;360 50 38.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
+                                </polygon>
+                                <polygon fill="#d96c21" points="5 89 50 89 27.5 50" style="        animation-play-state: running;
+                animation-delay: 0s;
+        " transform="rotate(122.36 27.5 77.5)">
+                                    <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 27.5 77.5;360 27.5 77.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
+                                </polygon>
+                                <polygon fill="#35599b" points="72.5 50 50 89 95 89" style="animation-play-state: running; animation-delay: 0s;" transform="rotate(122.36 72.3301 77.5)">
+                                    <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1.8518518518518516s" values="0 72.5 77.5;360 72 77.5" keyTimes="0;1" style="animation-play-state: running; animation-delay: 0s;"></animateTransform>
+                                </polygon>
+                            </g>
+                        </g>
                     </g>
-                </g>
-            </g>
-         </svg>
+                 </svg>
     </div>
         <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
             <div class="app-header header-shadow  sidebar-text-dark " style="background-color:white!important;">
@@ -337,7 +336,7 @@
                                                     </li>
                                                 }
 
-                                                @if (User.IsInRole("Consultant") || User.IsInRole("Project Manager"))
+                                                @if (User.IsInRole("Consultant"))
                                                 {
                                                     <li>
                                                         <a href="@Url.Action("CreateAnalysis", "Assessment")">
@@ -555,6 +554,12 @@
                                                         Activity Creation
                                                     </a>
                                                 </li>
+                                                <li>
+                                                    <a href="@Url.Action("Create", "Role")">
+                                                        <i class="metismenu-icon pe-7s-diamond"></i>
+                                                        Role Creation
+                                                    </a>
+                                                </li>
                                             </ul>
                                         }
                                     </li>
@@ -603,18 +608,13 @@
             </div>
 
         </div>
-    
-        @*<div id="load"><img class="Load_img my-auto" src="~/Asset/images/loading.gif"></div>*@
-
         <script>
             $(document).ready(function () {
                 $(document).ajaxStart(function () {
                     $("#load").css("display", "block");
-                    //debugger;
                 });
                 $(document).ajaxComplete(function () {
                     $("#load").css("display", "none");
-                   // debugger;
                 });
             });
             $(".vertical-nav-menu a").each(function () {
